--- a/2023-04/style.scss
+++ b/2023-04/style.scss
@@ -62,9 +62,13 @@ div.crawl {
     align-items: end; 
     background: 
       
-      linear-gradient(90deg, #111 15vmin, transparent  1vmin )  calc(#{$box-w} + 31.5vmin) calc(#{$box-h} + 6.5vmin)  / .5vmin 17vmin no-repeat,
+      
+      /*** BUILDING MAIN ***/
 
+      linear-gradient(90deg, #111 15vmin, transparent  1vmin )  calc(#{$box-w} + 31.5vmin) calc(#{$box-h} + 6.5vmin)  / .5vmin 17vmin no-repeat,
       linear-gradient(90deg, #111 15vmin, transparent  1vmin )  calc(#{$box-w} + 27vmin) calc(#{$box-h} + 10.5vmin)  / .5vmin 14vmin no-repeat,
+      
+      
       
     /*** LEFT SIDE BUILDING ***/
       
@@ -81,7 +85,7 @@ div.crawl {
       repeating-linear-gradient(90deg, transparent 0vmin,  transparent 2.75vmin, darken($blue, 55%) 2.75vmin, darken($blue, 40%) 3vmin) calc(#{$box-w} + 0vmin) calc(#{$box-h} + 31vmin)  / 35vmin 80vmin no-repeat,
     repeating-linear-gradient(-15deg, transparent 0vmin,  transparent 3.25vmin, darken($blue, 55%) 3.75vmin, darken($blue, 20%) 4vmin)calc(#{$box-w} + 0vmin) calc(#{$box-h} + 30vmin)  / 35vmin 80vmin no-repeat, 
       
-    linear-gradient(-15deg, #133955 0vmin, #133955 80vmin, transparent 1vmin) calc(#{$box-w} + 0vmin) calc(#{$box-h} + 6vmin)  / 35vmin 100vmin no-repeat,
+    linear-gradient(-15deg, darken($blue, 65%) 0vmin, darken($blue, 40%) 80vmin, transparent 1vmin) calc(#{$box-w} + 0vmin) calc(#{$box-h} + 6vmin)  / 35vmin 100vmin no-repeat,
       
       
       
@@ -102,10 +106,33 @@ div.crawl {
     repeating-linear-gradient(15deg, transparent 0vmin,  transparent 3.25vmin, darken($blue, 55%) 3.75vmin, darken($blue, 20%) 4vmin)calc(#{$boxR-w} + 0vmin) calc(#{$boxR-h} + 35vmin)  / 55vmin 80vmin no-repeat, 
     
       
-    linear-gradient(15deg, #133955 0vmin, #133955 80vmin, transparent 1vmin) calc(#{$boxR-w} + 0vmin) calc(#{$boxR-h} + 5.5vmin)  / 55vmin 100vmin no-repeat,
+    linear-gradient(15deg, darken($blue, 55%) 0vmin, darken($blue, 30%) 80vmin, transparent 1vmin) calc(#{$boxR-w} + 0vmin) calc(#{$boxR-h} + 5.5vmin)  / 55vmin 100vmin no-repeat,
+      
+      
+      
+   /*** BUILDING RIGHT ***/
+
+      
+    /*** RIGHT SIDE BUILDING ***/
+      
+
+    /* building */
+      linear-gradient(90deg,  darken($blue, 55%) 15vmin, transparent  1vmin )  calc(#{$boxR-w} + 50vmin) calc(#{$boxR-h} + 57vmin)  / 3.5vmin 85vmin no-repeat,
+      
+      linear-gradient(90deg,  darken($blue, 55%) 15vmin, transparent  1vmin )  calc(#{$boxR-w} + 62.5vmin) calc(#{$boxR-h} + 60vmin)  / 2.25vmin 85vmin no-repeat,
+      
+    linear-gradient(15deg, transparent 20vmin, darken($blue, 55%) 20vmin, darken($blue, 45%)  25vmin,  transparent 25vmin) calc(#{$boxR-w} + 50vmin) calc(#{$boxR-h} + 49vmin)  / 55vmin 30vmin no-repeat,
+      
+      
+      repeating-linear-gradient(90deg, transparent 0vmin,  transparent 2.75vmin, darken($blue, 65%) 2.75vmin, darken($blue, 40%) 3vmin) calc(#{$boxR-w} + 50vmin) calc(#{$boxR-h} + 77vmin)  / 55vmin 80vmin no-repeat,
+    repeating-linear-gradient(15deg, transparent 0vmin,  transparent 3.25vmin, darken($blue, 65%) 3.75vmin, darken($blue, 20%) 4vmin)calc(#{$boxR-w} + 50vmin) calc(#{$boxR-h} + 65vmin)  / 55vmin 80vmin no-repeat, 
+    
+      
+    linear-gradient(15deg, darken($blue, 65%) 0vmin, darken($blue, 35%) 80vmin, transparent 1vmin) calc(#{$boxR-w} + 50vmin) calc(#{$boxR-h} + 35.5vmin)  / 55vmin 100vmin no-repeat,
       
       
 }
+  
 
   
 
@@ -136,7 +163,7 @@ div.crawl:before {
     white-space: nowrap;
     //font-style: italic;
     content: 'ng News: It is Divtober!';
-    //animation: move-left-crawl linear 8s infinite;
+    animation: move-left-crawl linear 8s infinite;
 }
 div.crawl:after {
     width: 55vmin;
@@ -147,112 +174,77 @@ div.crawl:after {
     left: 36vmin;
     transform: skew(0, 15deg); 
   content: 'ober! –––  Breaking News: It is Divtober!';
-    //animation: move-right-crawl linear 8s infinite;
+    animation: move-right-crawl linear 8s infinite;
 }
 
-
 @keyframes move-left-crawl {
-    0% {
-      padding-left: 30vmin;
-    }
-    100% {
-      padding-left: 0vmin;
-    }
+    0% {  content: 'ng News: It is Divtober! – Breaki'; }
+    3% {  content: 'g News: It is Divtober! – Breakin'; }
+    6% {  content: ' News: It is Divtober! – Breaking'; }
+    9% {  content: 'News: It is Divtober! – Breaking '; }
+    12% {  content: 'ews: It is Divtober! – Breaking N'; }
+    15% {  content: 'ws: It is Divtober! – Breaking Ne'; }
+    18% {  content: 's: It is Divtober! – Breaking New'; }
+    21% {  content: ': It is Divtober! – Breaking News'; }
+    24% {  content: 'It is Divtober! – Breaking News: '; }
+    27% {  content: 't is Divtober! – Breaking News: I'; }
+    30% {  content: ' is Divtober! – Breaking News: It'; }
+    33% {  content: 'is Divtober! – Breaking News: It '; }
+    36% {  content: 's Divtober! – Breaking News: It i'; }
+    39% {  content: ' Divtober! – Breaking News: It is'; }
+    42% {  content: 'Divtober! – Breaking News: It is '; }
+    45% {  content: 'ivtober! – Breaking News: It is D'; }
+    48% {  content: 'vtober! – Breaking News: It is Di'; }
+    51% {  content: 'tober! – Breaking News: It is Div'; }
+    54% {  content: 'ober! – Breaking News: It is Divt'; }
+    57% {  content: 'ober! – Breaking News: It is Divt'; }
+    60% {  content: 'ber! – Breaking News: It is Divto'; }
+    63% {  content: 'er! – Breaking News: It is Divtob'; }
+    66% {  content: 'r! – Breaking News: It is Divtobe'; }
+    69% {  content: '! – Breaking News: It is Divtober'; }
+    72% {  content: ' – Breaking News: It is Divtober!'; }
+    75% {  content: '– Breaking News: It is Divtober! '; }
+    78% {  content: ' Breaking News: It is Divtober! –'; }
+    81% {  content: 'Breaking News: It is Divtober! – '; }
+    84% {  content: 'reaking News: It is Divtober! – B'; }
+    87% {  content: 'eaking News: It is Divtober! – Br'; }
+    90% {  content: 'aking News: It is Divtober! – Bre'; }
+    93% {  content: 'king News: It is Divtober! – Brea'; }
+    96% {  content: 'ing News: It is Divtober! – Break'; }
 }
 
 @keyframes move-right-crawl {
-    0% {
-      padding-left: 0vmin;
-    }
-    100% {
-      padding-left: -235vmin;
-    }
+    0% {  content: 'ober! – Breaking News: It is Divt'; }
+    3% {  content: 'ber! – Breaking News: It is Divto'; }
+    6% {  content: 'er! – Breaking News: It is Divtob'; }
+    9% {  content: 'r! – Breaking News: It is Divtobe'; }
+    12% {  content: '! – Breaking News: It is Divtober'; }
+    15% {  content: ' – Breaking News: It is Divtober!'; }
+    18% {  content: '– Breaking News: It is Divtober! '; }
+    21% {  content: ' Breaking News: It is Divtober! –'; }
+    24% {  content: 'Breaking News: It is Divtober! – '; }
+    27% {  content: 'reaking News: It is Divtober! – B'; }
+    30% {  content: 'eaking News: It is Divtober! – Br'; }
+    33% {  content: 'aking News: It is Divtober! – Bre'; }
+    36% {  content: 'king News: It is Divtober! – Brea'; }
+    39% {  content: 'ing News: It is Divtober! – Break'; }
+    42% {  content: 'ng News: It is Divtober! – Breaki'; }
+    45% {  content: 'g News: It is Divtober! – Breakin'; }
+    48% {  content: ' News: It is Divtober! – Breaking'; }
+    51% {  content: 'News: It is Divtober! – Breaking '; }
+    54% {  content: 'ews: It is Divtober! – Breaking N'; }
+    57% {  content: 'ws: It is Divtober! – Breaking Ne'; }
+    60% {  content: 's: It is Divtober! – Breaking New'; }
+    63% {  content: ': It is Divtober! – Breaking News'; }
+    66% {  content: 'It is Divtober! – Breaking News: '; }
+    69% {  content: 't is Divtober! – Breaking News: I'; }
+    72% {  content: ' is Divtober! – Breaking News: It'; }
+    75% {  content: 'is Divtober! – Breaking News: It '; }
+    78% {  content: 's Divtober! – Breaking News: It i'; }
+    81% {  content: ' Divtober! – Breaking News: It is'; }
+    84% {  content: 'Divtober! – Breaking News: It is '; }
+    87% {  content: 'ivtober! – Breaking News: It is D'; }
+    90% {  content: 'vtober! – Breaking News: It is Di'; }
+    93% {  content: 'tober! – Breaking News: It is Div'; }
+    96% {  content: 'ober! – Breaking News: It is Divt'; }
 }
-
-// $white: #ffffff;
-// $black: #444444;
-// $blue: #4b97ed;
-// $yellow: #f6cb7c;
-
-// div, div:before, div:after {
-//   padding: 0;
-//   margin: 0;
-//   box-sizing: border-box;
-// }
-
-
-// body {
-//   width: 100vw;
-//   height: 100vh;
-//   position: relative;
-//   z-index: 1;
-//   background: 
-
-//     repeating-linear-gradient(90deg, transparent 0 80px, lighten($blue, 20%) 80px 82px),
-//     repeating-linear-gradient(-10deg, transparent 0 90px, lighten($blue, 20%) 90px 92px), 
-//     conic-gradient(from 167.72deg at 50.06% 45.46%, #133955 -54.38deg, #344275 7.33deg, #6F357D 84.38deg, #30297D 138.99deg, #213A57 168.75deg, #290755 205.87deg, #0C4A47 264.38deg, #133955 305.62deg, #344275 367.33deg);
-//   // linear-gradient(45deg, lighten($blue, 10%) 15%, lighten($blue, 5%) 100%);
-  
-// }
-
-
-// div, div:before, div:after {
-//   padding: 0;
-//   margin: 0;
-//   box-sizing: border-box;
-// }
-
-
-
-// div.crawl {
-//     width: 180vw;
-//     height: 40vmin;
-//     top: 40vmin;
-//     left: -40vw;
-//     position: relative;
-//     border-top: solid 10px darken(black, 5%);
-//     border-bottom: solid 10px darken(black, 5%);
-//     background-color: #333;
-//     transform: rotate(-10deg); 
-//     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-// }
-
-// div.crawl:before,
-// div.crawl:after {
-//     width: 200vmin;
-//     height: 20vmin;
-//     top: -2vmin;
-//     left: 20vmin;
-//     position: relative;
-//     color: $yellow;
-//     font-size: 20vmin;
-//     font-family: 'Teko', sans-serif;
-//     text-wrap: nowrap;
-//     text-transform: uppercase;
-//     font-style: italic;
-//     text-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-//     overflow: hidden;
-// }
-  
-// div.crawl:before {
-//     display: block;
-//     white-space: nowrap;
-//     content: 'Breaking News: It is Divtober!';
-//     animation: move-crawl 8s linear 0s infinite both running, move-crawl 8s linear 3s infinite both running;
-// }
-
-// div.crawl:after {
-//   display: block;
-//   top: -6vmin;
-//   content: 'Day 4 Prompt: Crawl';
-//   animation: move-crawl 10s linear 3s infinite both running, move-crawl 10s linear 6s infinite both running;
-// }
-
-// @keyframes move-crawl {
-//     0% {
-//       left: 140vw;
-//     }
-//     100% {
-//       left: -140vw;
-//     }
-// }
